Several small improvements

--- a/Launchy.ini
+++ b/Launchy.ini
@@ -1,6 +1,6 @@
 ﻿[Config]
 GUI_posn    =   '80 60'
-workdir     =   ''
+workdir     =   ''      ; DO NOT set this in the development version!
 iconify		=	1
 letscrash	=	1 		; Allows the user to make Launchy crash (for testing error trapping).
 
