Ride handling improved plus some bug fixes

--- a/Launchy.ini
+++ b/Launchy.ini
@@ -40,6 +40,7 @@ active      =   1                   ; Use this only to disable RIDE permanently
 tick      	=   0                   ; Specify the default for whether the user shall be asked for a RIDE
 port        =   4502                ; The default port. The user can change this via the GUI
 connect     =   '127.0.0.1'  		; Note: on some machines "localhost" does not work but 127.0.0.1 does.
+profile     =   'C:\T\DSE\Ride\prefs.json'
 
 ; This path:
 path2ride   =   'C:\Users\[you]\AppData\Local\Programs\Dyalog\RIDE'
