INI file editing and Ride port improved plus one bug fix.

--- a/Launchy.ini
+++ b/Launchy.ini
@@ -1,4 +1,4 @@
-﻿[Config]
+[Config]
 GUI_posn    =   '80 60'
 workdir     =   ''      ; DO NOT set this in the development version!
 iconify		=	1
@@ -38,7 +38,7 @@ default     =   'd' ; Can be one of: a,b,c,d
 [RIDE]
 active      =   1                   ; Use this only to disable RIDE permanently
 tick      	=   0                   ; Specify the default for whether the user shall be asked for a RIDE
-port        =   4502                ; The default port. The user can change this via the GUI
+port        =   4520                ; The default port. The user can change this via the GUI
 connect     =   '127.0.0.1'  		; Note: on some machines "localhost" does not work but 127.0.0.1 does.
 profile     =   'C:\T\DSE\Ride\prefs.json'
 
