--- a/Launchy.ini
+++ b/Launchy.ini
@@ -43,8 +43,9 @@ connect     =   '127.0.0.1'  		; Note: on some machines "localhost" does not wor
 profile     =   'C:\T\DSE\Ride\prefs.json'
 
 ; This path:
-path2ride   =   'C:\Users\[you]\AppData\Local\Programs\Dyalog\RIDE'
+path2ride   =   'C:\Users\[you]\AppData\Local\Programs\Dyalog'
 ; refers to the default installation directory for Ride when `[you]` will be replaced by `⎕AN` at runtime. 
+; The search for Ride installations in that folder will be performed recursively.
 ; All installed main versions (like 3.0, 3.1 and 4.0) are going into the "File" menu.
 ; You need to specify a different path only if you have decided to install Ride in a non-default location.
 ; If several sub versions (say 3.0.1234 and 3.0.9876) are installed then Launchy determines the "best" version (3.0.9876 in our example) automatically.
