--- a/acre.config
+++ b/acre.config
@@ -1,1 +1,1 @@
-[   CaseCode←'On'   KeepHistory←'On'   Open←''   ProjectSpace←'#._Launchy'   StartUp←'']
+[   CaseCode←'On'   Open←''   ProjectSpace←'#._Launchy'   StartUp←'']
