wssize can be entered now manually

--- a/Launchy.ini
+++ b/Launchy.ini
@@ -26,13 +26,11 @@ size        =   18
 
 [WS_CHECK]          ; See combo box "check workspace integrity"
 list        =   ''
-list        ,=  'a) occasionally (default)' 
-list        ,=  'b) after each callback; -Dhc'
-list        ,=  'c) on return to session input; -Dhw'
-list        ,=  'd) combine b) and c); -Dhcw' 
-list        ,=  'e) getspace() (very slow); -DhW'
-val         =   ''
-val         ,=  ''
+list        ,=  'b) after each callback; -Dc'
+list        ,=  'c) on return to session input; -Dw'
+list        ,=  'd) combine b) and c); -Dcw' 
+list        ,=  'e) Log ⎕SE keystrokes to ./apllog; -DK' 
+list        ,=  'f) After every line (very slow); -DW'
 default     =   'd' ; Can be one of: a,b,c,d 
 
 [RIDE]
