Installer and many small improvements

--- a/Launchy.ini
+++ b/Launchy.ini
@@ -3,6 +3,7 @@ GUI_posn    =   '80 60'
 workdir     =   ''      ; DO NOT set this in the development version!
 iconify		=	1
 letscrash	=	1 		; Allows the user to make Launchy crash (for testing error trapping).
+name = 'Kai'
 
 [WSSIZE]
 options     =   '32M,64M,128M,256M,512M,1G,2G,4G'
