[CONFIG]CommandLine added to INI plus one bug fix

--- a/Launchy.ini
+++ b/Launchy.ini
@@ -5,6 +5,9 @@ iconify		=	1
 letscrash	=	1 		; Allows the user to make Launchy crash (for testing error trapping).
 name = 'Kai'
 
+CommandLine = ''        ; Command line options (nested)
+
+
 [WSSIZE]
 options     =   '32M,64M,128M,256M,512M,1G,2G,4G'
 default     =   '256M'
