Several improvements and bug fixes

--- a/Launchy.ini
+++ b/Launchy.ini
@@ -12,14 +12,8 @@ CommandLine = ''        ; Command line options (nested)
 options     =   '32M,64M,128M,256M,512M,1G,2G,4G'
 default     =   '256M'
 
-[F32]
-active      =   1
-tick        =   0
-
-[DYALOG_5977]
-active      =   1
-tick        =   0
-
+[EXEC_SETUP]            ; Decides whether the option "Execute Setup.dyalog" is ticked or not
+default     = 1
 
 [FONT]          ; Make sure that these settings reflect your setting in []SE!
 name        =   'APL385 Unicode'
@@ -27,12 +21,13 @@ size        =   18
 
 [WS_CHECK]          ; See combo box "check workspace integrity"
 list        =   ''
+list        ,=  'a) Occasionally' 
 list        ,=  'b) after each callback; -Dc'
 list        ,=  'c) on return to session input; -Dw'
 list        ,=  'd) combine b) and c); -Dcw' 
 list        ,=  'e) Log ⎕SE keystrokes to ./apllog; -DK' 
 list        ,=  'f) After every line (very slow); -DW'
-default     =   'd' ; Can be one of: a,b,c,d 
+default     =   'd' ; Can be one of: a,b,c,d,e,f 
 
 [RIDE]
 active      =   1                   ; Use this only to disable RIDE permanently
