--- a/cider.config
+++ b/cider.config
@@ -1,11 +1,11 @@
-// Configuration file for the Dyalog project manager Proma.
+// Configuration file for the Dyalog project manager Cider.
 // Relative paths refer to the folder this config file stems from.
-// Use ]PROMA.OpenProject to open a project that carries a file "proma.config".
+// Use ]Cider.OpenProject to open a project that carries a file "cider.config".
 
 {
-    PROMA: {
-    // These are Proma's own configuration parameters
-        "projectSpace": "Launchy",                 // Where the project is going to live; overwrite with ]Proma.OpenProject {path} -target=#.foo
+    CIDER: {
+    // These are Cider's own configuration parameters
+        "projectSpace": "Launchy",                 // Where the project is going to live; overwrite with ]Cider.OpenProject {path} -target=#.foo
         "parent": "#",
         "source": "APLSource",            // Where does the code live? (relative to the project folder; might be empty)
         "tatinFolder": "./packages,./packages_dev=TestCases",      	      // Folder(s) with installed Tatin packages        
@@ -17,8 +17,8 @@
     },
     
     LINK: {
-    // These are LINK parameters which are passed on to LINK when Proma brings the APL code into the WS with LINK
-        "arrays": 0,                          // [0|1]: 1 means that all variables are watched, 0 means that Proma does not care 
+    // These are LINK parameters which are passed on to LINK when Cider brings the APL code into the WS with LINK
+        "arrays": 0,                          // [0|1]: 1 means that all variables are watched, 0 means that Cider does not care 
         "beforeRead": "",                     // Empty or fully qualified function name
         "beforeWrite": "",                    // Empty or fully qualified function name
      // Do not change the following LINK entries unless you a) have to and b) know exactly what you are doing:
@@ -69,7 +69,7 @@
     
             
     USER: {                                   
-    // User-defined stuff (ignored by Proma); what follows is an example
+    // User-defined stuff (ignored by Cider); what follows is an example
         // "convertFromAcre": 1,                 
     },
 }
