Final commit for 7.4.0

--- a/Launchy.ini
+++ b/Launchy.ini
@@ -37,7 +37,7 @@ connect     =   '127.0.0.1'  		; Note: on some machines "localhost" does not wor
 profile     =   'C:\T\DSE\Ride\prefs.json'
 
 ; This path:
-path2ride   =   'C:\Users\[you]\AppData\Local\Programs\Dyalog'
+path2ride   =   'C:\Users\%USERNAME%\AppData\Local\Programs\Dyalog'
 ; refers to the default installation directory for Ride when `[you]` will be replaced by `⎕AN` at runtime. 
 ; The search for Ride installations in that folder will be performed recursively.
 ; All installed main versions (like 3.0, 3.1 and 4.0) are going into the "File" menu.
