Report added regarding .NET config

--- a/cider.config
+++ b/cider.config
@@ -1,1 +1,29 @@
-{  CIDER: {    dependencies: {      tatin: "./packages",    },    dependencies_dev: {      tatin: "./packages_dev=TestCases",    },    distributionFolder: "Dist",    init: "Initial",    make: "Admin.Make 1",    parent: "#",    projectSpace: "Launchy",    project_url: "",    source: "APLSource",    tests: "TestCases.RunTests",  },  LINK: {    forceFilenames: 1,    watch: "ns",  },  SYSVARS: {    io: 1,    ml: 1,  },  USER: {  },}
+{
+  CIDER: {
+    dependencies: {
+      nuget: "",
+      tatin: "./packages",
+    },
+    dependencies_dev: {
+      tatin: "./packages_dev=TestCases",
+    },
+    distributionFolder: "Dist",
+    init: "Initial",
+    make: "Admin.Make 1",
+    parent: "#",
+    projectSpace: "Launchy",
+    project_url: "",
+    source: "APLSource",
+    tests: "TestCases.RunTests",
+  },
+  LINK: {
+    forceFilenames: 1,
+    watch: "ns",
+  },
+  SYSVARS: {
+    io: 1,
+    ml: 1,
+  },
+  USER: {
+  },
+}
