History reduced and project_url specified in Cider config file

--- a/cider.config
+++ b/cider.config
@@ -12,7 +12,7 @@
     make: "Admin.Make 1",
     parent: "#",
     projectSpace: "Launchy",
-    project_url: "",
+    project_url: "https://github.com/aplteam/Launchy",
     source: "APLSource",
     tests: "TestCases.RunTests",
   },
